--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <img src="images_csm/logo_community_science.jpg" alt="Community science logo">
     </div>
     <ul>
-      <li><a>Visit</a></li>
-      <li><a>Involve</a></li>
-      <li><a>Explore</a></li>
-      <li><a>Exhibition</a></li>
-      <li><a>News</a></li>
-      <li><a>Home</a></li>
+      <li><a href="pages/visit.html">Visit</a></li>
+      <li><a href="pages/involve.html">Involve</a></li>
+      <li><a href="pages/explore.html">Explore</a></li>
+      <li><a href="pages/exhibition.html">Exhibition</a></li>
+      <li><a href="pages/news.html">News</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
   </nav>
   <section class="moon_background" alt="Community Science Museum background">
-    <h1>Explore together</h1>
+    <h1>Welcome to Community Science Museum</h1>
     <h4>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h4>
   </section>
   
