--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </nav>
   <section class="moon_background" alt="Community Science Museum background">
     <h1>Welcome to Community Science Museum</h1>
+    <h4>Explore together</h4>
     <h4>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h4>
   </section>
   
