--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <ul>
       <li><a href="pages/visit.html">Visit</a></li>
-      <li><a href="pages/involve.html">Involve</a></li>
+      <li><a href="pages/connect.html">Connect</a></li>
       <li><a href="pages/explore.html">Explore</a></li>
       <li><a href="pages/exhibition.html">Exhibition</a></li>
       <li><a href="pages/news.html">News</a></li>
