some random change

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </ul>
   </nav>
   <section class="moon_background" alt="Community Science Museum background">
-    <h1>Welcome to Community Science Museum</h1>
-    <h4>Explore together</h4>
+    <h1>EXPLORE TOGETHER</h1>
+    <h4>Welcome to Community Science Museum</h4>
     <h4>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h4>
   </section>
   
