--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     </div>
     <ul>
       <li><a href="pages/visit.html">Visit</a></li>
-      <li><a href="pages/involve.html">Involve</a></li>
+      <li><a href="pages/connect.html">Involve</a></li>
       <li><a href="pages/explore.html">Explore</a></li>
       <li><a href="pages/exhibition.html">Exhibition</a></li>
       <li><a href="pages/news.html">News</a></li>
       <li><a href="index.html">Home</a></li>
     </ul>
   </nav>
-  <section class="moon_background" alt="Community Science Museum background">
-    <h1>Welcome to Community Science Museum</h1>
-    <h4>Explore together</h4>
-    <h4>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h4>
+  <section class="" alt="">
+    <h1>Explore together</h1>
+    <h3>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h3>
   </section>
   
 </body>
