Added metadata to the pages

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Community Science Museum</title>
+  <meta name="description" content="Come join us at the Community Science Museum where we’re committed to making science accessible to all. 
+  The admission is free and there's plenty of things to explore">
+  <meta name="keywords" content="HTML, CSS">
+  <meta name="author" content="Suphachai Hestmark">
+  <title>Community Science Museum | Explore Together</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
