added background image handheld portrait

--- a/index.html
+++ b/index.html
@@ -16,17 +16,23 @@
     </div>
     <ul>
       <li><a href="pages/visit.html">Visit</a></li>
-      <li><a href="pages/connect.html">Involve</a></li>
+      <li><a href="pages/connect.html">Connect</a></li>
       <li><a href="pages/explore.html">Explore</a></li>
       <li><a href="pages/exhibition.html">Exhibition</a></li>
       <li><a href="pages/news.html">News</a></li>
       <li><a href="index.html">Home</a></li>
     </ul>
   </nav>
-  <section class="" alt="">
-    <h1>Explore together</h1>
-    <h3>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h3>
-  </section>
-  
+  <header class="header_container" alt="In the Community Science Museum">
+    <div class="inside_container">
+      <h1>Explore together</h1>
+    <h4 class="welcome_to">Welcome to Community Science Museum</h4>
+    <div class="header_bottom">
+      <h4 class="header_opening_hour">Open daily except Monday</h4>
+      <h4>Admission: <strong class="admission_fee">Free</strong></h4>
+    </div>
+    </div>
+  </header>
+  <h3>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h3>
 </body>
 </html>
