finished off handheld background image content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
   </nav>
   <header class="header_container" alt="In the Community Science Museum">
-    <div class="inside_container">
+    <div class="inside_header_container">
       <h1>Explore together</h1>
     <h4 class="welcome_to">Welcome to Community Science Museum</h4>
     <div class="header_bottom">
