--- a/pages/connect.html
+++ b/pages/connect.html
@@ -8,6 +8,18 @@
 <title>Connect | Cummunity Science Museum</title>
 </head>
 <body>
-  
+  <nav id="navigation_bar">
+    <div class="logo">
+      <img src="/images_csm/logo_community_science.jpg" alt="Community science logo">
+    </div>
+    <ul>
+      <li><a href="visit.html">Visit</a></li>
+      <li><a href="connect.html">Connect</a></li>
+      <li><a href="explore.html">Explore</a></li>
+      <li><a href="exhibition.html">Exhibition</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="/index.html">Home</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
