Background image added for all pages

--- a/pages/connect.html
+++ b/pages/connect.html
@@ -5,6 +5,7 @@
   <meta name="description" content="Get involve with our programs and explore the world of science.">
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
+  <link rel="stylesheet" type="text/css" href="connect.css">
 <title>Connect | Cummunity Science Museum</title>
 </head>
 <body>
@@ -21,5 +22,10 @@
       <li><a href="/index.html">Home</a></li>
     </ul>
   </nav>
+  <header class="header_container" alt="Visit Community Science Museum">
+    <div class="inside_header_container">
+      <h1>Connect</h1>
+    </div>
+  </header>
 </body>
 </html>
