--- a/pages/news.html
+++ b/pages/news.html
@@ -5,6 +5,7 @@
   <meta name="description" content="Keep yourself update with our upcoming event.">
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
+  <link rel="stylesheet" type="text/css" href="news.css">
   <title>News | Community Science Museum</title>
 </head>
 <body>
@@ -21,5 +22,10 @@
       <li><a href="/index.html">Home</a></li>
     </ul>
   </nav>
+  <header class="header_container" alt="Visit Community Science Museum">
+    <div class="inside_header_container">
+      <h1>News</h1>
+    </div>
+  </header>
 </body>
 </html>
