--- a/pages/explore.html
+++ b/pages/explore.html
@@ -6,6 +6,7 @@
   technology, our planet and more.">
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
+  <link rel="stylesheet" type="text/css" href="explore.css">
   <title>News | Community Science Museum</title>
 </head>
 <body>
@@ -22,5 +23,10 @@
       <li><a href="/index.html">Home</a></li>
     </ul>
   </nav>
+  <header class="header_container" alt="Visit Community Science Museum">
+    <div class="inside_header_container">
+      <h1>Explore</h1>
+    </div>
+  </header>
 </body>
 </html>
