--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="pages/explore.html">Explore</a></li>
       <li><a href="pages/exhibition.html">Exhibition</a></li>
       <li><a href="pages/news.html">News</a></li>
-      <li><a href="index.html">Home</a></li>
+      <li class="on_this_page"><a href="index.html">Home</a></li>
     </ul>
   </nav>
   <header class="header_container" alt="In the Community Science Museum">
