--- a/pages/news.html
+++ b/pages/news.html
@@ -18,7 +18,7 @@
       <li><a href="connect.html">Connect</a></li>
       <li><a href="explore.html">Explore</a></li>
       <li><a href="exhibition.html">Exhibition</a></li>
-      <li><a href="news.html">News</a></li>
+      <li class="on_this_page"><a href="news.html">News</a></li>
       <li><a href="/index.html">Home</a></li>
     </ul>
   </nav>
