--- a/pages/visit.html
+++ b/pages/visit.html
@@ -15,7 +15,7 @@
       <img src="/images_csm/logo_community_science.jpg" alt="Community science logo">
     </div>
     <ul>
-      <li><a href="visit.html">Visit</a></li>
+      <li class="on_this_page"><a href="visit.html">Visit</a></li>
       <li><a href="connect.html">Connect</a></li>
       <li><a href="explore.html">Explore</a></li>
       <li><a href="exhibition.html">Exhibition</a></li>
