Added text below header

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
       <h1>Explore together</h1>
     <h4 class="welcome_to">Welcome to Community Science Museum</h4>
     <div class="header_bottom">
-      <h4 class="header_opening_hour">Open daily except Monday</h4>
+      <h4>Open daily except Monday</h4>
       <h4>Admission: <strong class="admission_fee">Free</strong></h4>
     </div>
     </div>
   </header>
-  <h3>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h3>
+  <div class="join_us_textbox">
+    <h3>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h3>
+  </div>
 </body>
 </html>
