Finished home for mobile portrait

--- a/index.html
+++ b/index.html
@@ -36,5 +36,45 @@
   <div class="join_us_textbox">
     <h3>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h3>
   </div>
+  <section class="upper_section">
+    <img src="images_csm/celso-405219.jpg" alt="Moon cosmology in when changing colors">
+    <p class="photo_text">Photo: Community Science Museum</p>
+    <p class="article_text">
+      Over the course of human history, science has developed from our early understanding of fire, wind, water, and 
+      earth to exploring everything from galaxies far away to the very building blocks of life itself.
+      The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and 
+      perhaps even ignite a lifelong passion to continue the exploration of the world around us.
+    </p>
+  </section>
+  <section class="lower_section">
+    <img src="images_csm/exhibition.jpg" alt="Exhibition spaces of Community Science Museum">
+    <p class="photo_text">Photo: Community Science Museum</p>
+    <p class="article_text">
+      We believe science should not be confined to the textbook, but brought to live through exhibits. This is 
+      why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these 
+      exhibits are designed for you to interact with and play around to see science come to life (apart from the 
+      dinosaur exhibits – they only come to life at night when everyone’s gone home).
+    </p>
+  </section>
+  <footer>
+    <div class="address">
+      <h4>Address:</h4>
+      <p>Stigerplatåveien 210</p>
+      <p>8626 Mo i Rana</p>
+      <p>Norway</p>
+      <p>Phone: 90 00 00 00</p>
+      <p>E-mail: info@example.com</p>
+    </div>
+    <div class="hours">
+      <h4>Hours: </h4>
+      <p>Monday: Closed</p>
+      <p>Tuesday: 10:00 – 16:00</p>
+      <p>Wednesday: 10:00 – 16:00</p>
+      <p>Thursday: 10:00 – 16:00</p>
+      <p>Friday: 10:00 – 19:00</p>
+      <p>Saturday: 9:00 – 16:00</p>
+      <p>Sunday: 9:00 – 13:00</p>
+    </div>
+  </footer>
 </body>
 </html>
