class for mobile collapse

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
   <section class="upper_section">
     <img src="images_csm/celso-405219.jpg" alt="Moon cosmology in when changing colors">
-    <p class="photo_text">Photo: Community Science Museum</p>
+    <p class="photo_text_mobile">Photo: Community Science Museum</p>
     <p class="article_text">
       Over the course of human history, science has developed from our early understanding of fire, wind, water, and 
       earth to exploring everything from galaxies far away to the very building blocks of life itself.
@@ -48,7 +48,7 @@
   </section>
   <section class="lower_section">
     <img src="images_csm/exhibition.jpg" alt="Exhibition spaces of Community Science Museum">
-    <p class="photo_text">Photo: Community Science Museum</p>
+    <p class="photo_text_mobile">Photo: Community Science Museum</p>
     <p class="article_text">
       We believe science should not be confined to the textbook, but brought to live through exhibits. This is 
       why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these 
