Finished homepage for mobile devices

--- a/index.html
+++ b/index.html
@@ -56,15 +56,7 @@
       dinosaur exhibits – they only come to life at night when everyone’s gone home).
     </p>
   </section>
-  <footer>
-    <div class="address">
-      <h4>Address:</h4>
-      <p>Stigerplatåveien 210</p>
-      <p>8626 Mo i Rana</p>
-      <p>Norway</p>
-      <p>Phone: 90 00 00 00</p>
-      <p>E-mail: info@example.com</p>
-    </div>
+  <section class="bottom">
     <div class="hours">
       <h4>Hours: </h4>
       <p>Monday: Closed</p>
@@ -75,6 +67,14 @@
       <p>Saturday: 9:00 – 16:00</p>
       <p>Sunday: 9:00 – 13:00</p>
     </div>
-  </footer>
+    <div class="address">
+      <h4>Address:</h4>
+      <p>Stigerplatåveien 210</p>
+      <p>8626 Mo i Rana</p>
+      <p>Norway</p>
+      <p>Phone: 90 00 00 00</p>
+      <p>E-mail: info@example.com</p>
+    </div>
+  </section>
 </body>
 </html>
