removed tablet landscape

--- a/index.html
+++ b/index.html
@@ -78,5 +78,8 @@
         <p>E-mail: info@example.com</p>
       </div>
   </section>
+  <footer>
+    <p>©2020 Community Science Museum, All rights reserved</p>
+  </footer>
 </body>
 </html>
