finished off the Explore page

--- a/pages/connect.html
+++ b/pages/connect.html
@@ -27,5 +27,78 @@
       <h1>Connect</h1>
     </div>
   </header>
+  <h2 class="title_text">
+    Get involve through our programs
+  </h2>
+    <section class="section_one">
+      <img src="/images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg" alt="Giving heart to each other, supporting each other.">
+      <p class="photo_source_mobile">Photo: Kelly Sikkema on Unsplash</p>
+      <h2 class="h2_one_push_right">Support</h2>
+        <p class="article_text">
+          There are various ways you can support the museum. Donations are very welcome and are an important 
+          way we keep this museum open and accessible to the whole community.
+        </p>
+        <p class="article_text">
+          You can also support us by donating items of interest to the museum’s collections. If you have 
+          some item or collection that you think others would enjoy, please let us know by contacting our 
+          Collections Department and they will be able to assist you.
+        </p>
+    </section>
+  <p class="photo_source_desktop_one">Photo: Kelly Sikkema on Unsplash</p>
+  <section class="section_two">
+    <img src="/images_csm/teamwork_join_hands1804.jpg" alt="Get involve by teamwork, join hands.">
+      <p class="photo_source_mobile">Photo: @jcomp / Freepik</p>
+      <h2 class="h2_two_push_right">Volunteer</h2>
+        <p class="article_text">
+          A number of people volunteer their time and effort to keep the displays in good order and ready 
+          for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes 
+          of a working museum, access to staff- only lectures, and a monthly lunch where all staff and volunteers 
+          come together to discuss ideas for future exhibits and strategies for the museum.
+        </p>
+        <p class="article_text">
+          You can help volunteer in a number of different spheres. Please contact us if you’d like to find out
+          more about how you can get involved.
+        </p>
+  </section>
+  <p class="photo_source_desktop_two">Photo: @jcomp / Freepik</p>
+  <section class="section_one">
+    <img src="/images_csm/people-219985_1280.jpg" alt="A researcher looking throught microscope.">
+    <p class="photo_source_mobile">Photo: Community Science Museum</p>
+      <h2 class="h2_one_push_right">Internships</h2>
+        <p class="article_text">
+          Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with 
+          people? Well you could be just the right person to enjoy an internship at the museum.
+        </p>
+        <p class="article_text">
+          You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
+        </p>
+      </section>
+      <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
+  <section class="bottom">
+    <div class="hours">
+      <h4>Hours: </h4>
+      <p>Monday: Closed</p>
+      <p>Tuesday: 10:00 – 16:00</p>
+      <p>Wednesday: 10:00 – 16:00</p>
+      <p>Thursday: 10:00 – 16:00</p>
+      <p>Friday: 10:00 – 19:00</p>
+      <p>Saturday: 9:00 – 16:00</p>
+      <p>Sunday: 9:00 – 13:00</p>
+    </div>
+    <div class="address">
+      <h4>Address:</h4>
+      <p>Stigerplatåveien 210</p>
+      <p>8626 Mo i Rana</p>
+      <p>Norway</p>
+      <p>Phone: 90 00 00 00</p>
+      <p>E-mail: info@example.com</p>
+    </div>
+</section>
+<footer>
+  <p>©2020 Community Science Museum, All rights reserved</p>
+</footer>
+  <!-- Image source: url <https://images.unsplash.com/photo-1579208570378-8c970854bc23?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=kelly-sikkema-4le7k9XVYjE-unsplash.jpg> by Kelly Sikkema on Unsplash 
+      Image Source: url <https://www.freepik.com/free-photo/business-teamwork-join-hands-together-business-teamwork-concept_1185949.htm#page=1&query=support&position=28> by jcomp / Freepik
+  -->
 </body>
 </html>
