updated images source url

--- a/pages/connect.html
+++ b/pages/connect.html
@@ -97,7 +97,7 @@
 <footer>
   <p>©2020 Community Science Museum, All rights reserved</p>
 </footer>
-  <!-- Image source: url <https://images.unsplash.com/photo-1579208570378-8c970854bc23?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=kelly-sikkema-4le7k9XVYjE-unsplash.jpg> by Kelly Sikkema on Unsplash 
+  <!-- Image source: url <https://unsplash.com/photos/4le7k9XVYjE> by Kelly Sikkema on Unsplash 
       Image Source: url <https://www.freepik.com/free-photo/business-teamwork-join-hands-together-business-teamwork-concept_1185949.htm#page=1&query=support&position=28> by jcomp / Freepik
   -->
 </body>
