finished off News page

--- a/pages/news.html
+++ b/pages/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Keep yourself update with our upcoming event.">
+  <meta name="description" content="News and upcoming events at Community Science Museum.">
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
   <link rel="stylesheet" type="text/css" href="news.css">
@@ -27,5 +27,62 @@
       <h1>News</h1>
     </div>
   </header>
+  <h2 class="title_text">
+    Stay tuned with upcoming events
+  </h2>
+    <section class="section_one">
+      <img src="/images_csm/scientific-2040795.jpg" alt="Professor doing reasearch in the science lab.">
+      <p class="photo_source_mobile">Photo: Community Science Museum</p>
+      <h2 class="h2_one_push_right">Visiting Professor of Aeronautics</h2>
+        <p class="article_text">
+          It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology
+           will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
+        </p>
+    </section>
+  <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
+  <section class="section_two">
+    <img src="/images_csm/roberto-nickson-396152.jpg" alt="Mammut in the museum by night">
+      <p class="photo_source_mobile">Photo: Roberto Nickson, Community Science Museum</p>
+      <h2 class="h2_two_push_right">Night in the Museum</h2>
+        <p class="article_text">
+          Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. 
+          Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.
+        </p>
+  </section>
+  <p class="photo_source_desktop_two">Photo: Roberto Nickson, Community Science Museum</p>
+  <section class="section_one">
+    <img src="/images_csm/christian-dubovan-gxsRL8B_ZqE-unsplash.jpg" alt="Light being power up by electricity">
+    <p class="photo_source_mobile">Photo: Christian Dubovan on Unsplash</p>
+      <h2 class="h2_one_push_right">Energetica Exhibition on Loan</h2>
+        <p class="article_text">
+          On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. 
+          It’s a series of installations that allow visitors to experience the power of the elements as we harness them. 
+          From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.
+        </p>
+      </section>
+      <p class="photo_source_desktop_one">Photo: Christian Dubovan on Unsplash</p>
+  <section class="bottom">
+    <div class="hours">
+      <h4>Hours: </h4>
+      <p>Monday: Closed</p>
+      <p>Tuesday: 10:00 – 16:00</p>
+      <p>Wednesday: 10:00 – 16:00</p>
+      <p>Thursday: 10:00 – 16:00</p>
+      <p>Friday: 10:00 – 19:00</p>
+      <p>Saturday: 9:00 – 16:00</p>
+      <p>Sunday: 9:00 – 13:00</p>
+    </div>
+    <div class="address">
+      <h4>Address:</h4>
+      <p>Stigerplatåveien 210</p>
+      <p>8626 Mo i Rana</p>
+      <p>Norway</p>
+      <p>Phone: 90 00 00 00</p>
+      <p>E-mail: info@example.com</p>
+    </div>
+</section>
+<footer>
+  <p>©2020 Community Science Museum, All rights reserved</p>
+</footer>
 </body>
 </html>
