updated image source on News page

--- a/pages/news.html
+++ b/pages/news.html
@@ -84,5 +84,6 @@
 <footer>
   <p>©2020 Community Science Museum, All rights reserved</p>
 </footer>
+<!-- Source photo for "Energetica": url <https://unsplash.com/photos/gxsRL8B_ZqE>, Photo by Christian Dubovan on Unsplash -->
 </body>
 </html>
