added content on Explore page

--- a/pages/connect.html
+++ b/pages/connect.html
@@ -30,6 +30,7 @@
   <h2 class="title_text">
     Get involve through our programs
   </h2>
+  <!-- ----------- First Section ----------- -->
     <section class="section_one">
       <img src="/images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg" alt="Giving heart to each other, supporting each other.">
       <p class="photo_source_mobile">Photo: Kelly Sikkema on Unsplash</p>
@@ -45,6 +46,8 @@
         </p>
     </section>
   <p class="photo_source_desktop_one">Photo: Kelly Sikkema on Unsplash</p>
+
+  <!-- ----------- Second Section ----------- -->
   <section class="section_two">
     <img src="/images_csm/teamwork_join_hands1804.jpg" alt="Get involve by teamwork, join hands.">
       <p class="photo_source_mobile">Photo: @jcomp / Freepik</p>
@@ -61,6 +64,8 @@
         </p>
   </section>
   <p class="photo_source_desktop_two">Photo: @jcomp / Freepik</p>
+
+  <!-- ----------- Third Section ----------- -->
   <section class="section_one">
     <img src="/images_csm/people-219985_1280.jpg" alt="A researcher looking throught microscope.">
     <p class="photo_source_mobile">Photo: Community Science Museum</p>
