--- a/pages/news.html
+++ b/pages/news.html
@@ -30,6 +30,7 @@
   <h2 class="title_text">
     Stay tuned with upcoming events
   </h2>
+    <!-- ----------- First Section ----------- -->
     <section class="section_one">
       <img src="/images_csm/scientific-2040795.jpg" alt="Professor doing reasearch in the science lab.">
       <p class="photo_source_mobile">Photo: Community Science Museum</p>
@@ -40,6 +41,8 @@
         </p>
     </section>
   <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
+
+    <!-- ----------- Second Section ----------- -->
   <section class="section_two">
     <img src="/images_csm/roberto-nickson-396152.jpg" alt="Mammut in the museum by night">
       <p class="photo_source_mobile">Photo: Roberto Nickson, Community Science Museum</p>
@@ -50,6 +53,8 @@
         </p>
   </section>
   <p class="photo_source_desktop_two">Photo: Roberto Nickson, Community Science Museum</p>
+
+  <!-- ----------- Third Section ----------- -->
   <section class="section_one">
     <img src="/images_csm/christian-dubovan-gxsRL8B_ZqE-unsplash.jpg" alt="Light being power up by electricity">
     <p class="photo_source_mobile">Photo: Christian Dubovan on Unsplash</p>
