Added content on Exhibition and font size adjustment below header for all pages

--- a/pages/news.html
+++ b/pages/news.html
@@ -28,7 +28,7 @@
     </div>
   </header>
   <h2 class="title_text">
-    Stay tuned with upcoming events
+    Stay tuned with upcoming events and other exhibition venues
   </h2>
     <!-- ----------- First Section ----------- -->
     <section class="section_one">
