--- a/pages/exhibition.html
+++ b/pages/exhibition.html
@@ -27,5 +27,124 @@
       <h1>Exhibition spaces</h1>
     </div>
   </header>
+</header>
+<h2 class="title_text">
+  See what's on in museums and galleries
+</h2>
+
+  <!-- ----------- First Section ----------- -->
+  <section class="section_one">
+    <img src="/images_csm/Cosmology_escena-3d-espacio.jpg" alt="Cosmos image from the space">
+    <p class="photo_source_mobile">Photo: kjpargeter / Freepik</p>
+    <h2 class="h2_one_push_right">Cosmology</h2>
+      <p class="article_text">
+        Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the 
+        night sky and what we can see and know about the universe around us. We’ll locate the various 
+        constellations and galaxies that can be seen and learn a bit about the early navigators who 
+        used the stars to travel by.
+      </p>
+      <p class="article_text">
+        Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, 
+        to the latest exploration of the planets in our solar system.
+      </p>
+  </section>
+<p class="photo_source_desktop_one">Photo: kjpargeter / Freepik</p>
+
+  <!-- ----------- Second Section ----------- -->
+<section class="section_two">
+  <img src="/images_csm/skeleton-414543.jpg" alt="Skeleton of human evolution in through the window">
+    <p class="photo_source_mobile">Photo: Community Science Museum</p>
+    <h2 class="h2_two_push_right">Evolution</h2>
+      <p class="article_text">
+        For centuries, philosophers and scientists have wrestled with the question of our origins. 
+        Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we 
+        have had a framework for exploring and understanding our place in this world.
+      </p>
+      <p class="article_text">
+        Discover the origins of life on this planet and how the species we know today have evolved our time. 
+        You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly 
+        Mammoth, the Dodos, and a number of dinosaurs too.
+      </p>
+</section>
+<p class="photo_source_desktop_two">Photo: Community Science Museum</p>
+
+  <!-- ----------- Third Section ----------- -->
+<section class="section_one">
+  <img src="/images_csm/biology_and_medicine.jpg" alt="Dummy og human inside body part for medicine study">
+  <p class="photo_source_mobile">Photo: Community Science Museum</p>
+    <h2 class="h2_one_push_right">Biology and Medicine</h2>
+      <p class="article_text">
+        From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights 
+        into the great wonders of the tiny world.
+      </p>
+      <p class="article_text">
+        For many people their life expectancy is much longer and their quality of life much improved, thanks 
+        to the growth of our understanding of medicine. Over a series of exhibits we explore the history of 
+        medicine and take a look at some major breakthroughs including the discovery of penicillin and the 
+        first heart transplant.
+      </p>
+      <p class="article_text">
+        Many of our great medicinal discoveries have come not only from the lab, but also from observing animals 
+        in the wild. Often our fellow creatures have beat us to it.
+      </p>
+    </section>
+    <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
+  
+    <!-- ----------- Fouth Section ----------- -->
+    <section class="section_two">
+      <img src="/images_csm/franck-v-jIBMSMs4_kA-unsplash.jpg" alt="Al robot arm greeting human for a welcome">
+        <p class="photo_source_mobile">Photo: Franck V. on Unsplash</p>
+        <h2 class="h2_two_push_right">Robotics and Al</h2>
+          <p class="article_text">
+            The information revolution is here and robotics and artificial intelligence are the science of the future. 
+            From useful home applications of AI to industrial uses of robotics, the future is here. You can even say 
+            hello and shake the hand of Rob the Robot.
+          </p>
+    </section>
+    <p class="photo_source_desktop_two">Photo: Franck V. on Unsplash</p>
+
+    <!-- ----------- Fifth Section ----------- -->
+  <section class="section_one">
+    <img src="/images_csm/franck-v-f-7lbC1G9ZA-unsplash.jpg" alt="Ecology in science museum">
+    <p class="photo_source_mobile">Photo: Franck V. on Unsplash</p>
+    <h2 class="h2_one_push_right">Ecology</h2>
+      <p class="article_text">
+        As we learn more and more of the impact humans are having on the planet, the more important it becomes 
+        that scientists explore how to create a sustainable future not just for humans but for the whole planet.
+      </p>
+      <p class="article_text">
+        In our ecology section of the museum, we unpack the dangers we currently face including global warming, 
+        extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a 
+        brighter future.
+      </p>
+  </section>
+<p class="photo_source_desktop_one">Photo: Franck V. on Unsplash</p>
+
+<section class="bottom">
+  <div class="hours">
+    <h4>Hours: </h4>
+    <p>Monday: Closed</p>
+    <p>Tuesday: 10:00 – 16:00</p>
+    <p>Wednesday: 10:00 – 16:00</p>
+    <p>Thursday: 10:00 – 16:00</p>
+    <p>Friday: 10:00 – 19:00</p>
+    <p>Saturday: 9:00 – 16:00</p>
+    <p>Sunday: 9:00 – 13:00</p>
+  </div>
+  <div class="address">
+    <h4>Address:</h4>
+    <p>Stigerplatåveien 210</p>
+    <p>8626 Mo i Rana</p>
+    <p>Norway</p>
+    <p>Phone: 90 00 00 00</p>
+    <p>E-mail: info@example.com</p>
+  </div>
+</section>
+<footer>
+<p>©2020 Community Science Museum, All rights reserved</p>
+</footer>
+<!-- Source photo of Cosmology: url<https://www.freepik.com/free-photo/3d-space-scene_1077125.htm#page=1&query=cosmos&position=3> Designed by kjpargeter / Freepik.
+Source photo of Robotics and Al: <https://unsplash.com/photos/jIBMSMs4_kA> by Franck V. on Unsplash
+Source photo of Ecology: <https://unsplash.com/photos/f-7lbC1G9ZA> by Franck V. on Unsplash -->
 </body>
 </html>
