Added images on visit page, adjusted padding on sunheader-text and removed underline below navbar

--- a/pages/visit.html
+++ b/pages/visit.html
@@ -28,5 +28,84 @@
       <h1>Visit</h1>
     </div>
   </header>
+  <h2 class="title_text">
+    Plan your visit
+  </h2>
+
+  <!-- --------------------------------------- First Section ----------- -->
+  <section class="section_container">
+  <img src="/images_csm/andy-li-A_dJOYpxEVU-unsplash.jpg" alt="Holding ticket in hand">
+  <p class="photo_source">Photo: Andy Li on Unsplash</p>
+  <h2>Admission</h2>
+    <p class="article_text">
+      The entrance is free for all.
+    </p>
+    <p class="article_text">
+      There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy
+        printed guide of the museum.
+    </p>
+    <p class="article_text">
+      If you would like to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour.
+    </p>
+</section>
+
+  <!-- --------------------------------------- Second Section ----------- -->
+<section class="section_container">
+  <img src="/images_csm/absolutvision-UudGNHJdNSo-unsplash.jpg" alt="Handicap sign painten in the parking lot">
+    <p class="photo_source">Photo: Photo by AbsolutVision on Unsplash</p>
+    <h2>Accessibility</h2>
+      <p class="article_text">
+        The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
+      </p>
+</section>
+
+  <!-- --------------------------------------- Third Section ----------- -->
+<section class="section_container">
+  <img src="/images_csm/joseph-gonzalez-Wns3U-oVoLA-unsplash.jpg" alt="Waffles and coffe on the table, lunckbreak or coffee time">
+  <p class="photo_source">Photo: Joseph Gonzalez on Unsplash</p>
+    <h2>Food and drinks</h2>
+      <p class="article_text">
+        There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
+      </p>
+</section>
+  
+<!-- ------------------------------------------ Fouth Section ----------- -->
+<section class="section_container">
+  <img src="/images_csm/mike-petrucci-c9FQyqIECds-unsplash.jpg" alt="A sign showing that the shop is open, or open sign">
+    <p class="photo_source">Photo: Mike Petrucci on Unsplash</p>
+    <h2>Shop</h2>
+      <p class="article_text">
+        Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you 
+        to continue to explore science even after you’ve left the museum.
+      </p>
+</section>
+
+<section class="bottom">
+  <div class="hours">
+    <h4>Hours: </h4>
+    <p>Monday: Closed</p>
+    <p>Tuesday: 10:00 – 16:00</p>
+    <p>Wednesday: 10:00 – 16:00</p>
+    <p>Thursday: 10:00 – 16:00</p>
+    <p>Friday: 10:00 – 19:00</p>
+    <p>Saturday: 9:00 – 16:00</p>
+    <p>Sunday: 9:00 – 13:00</p>
+  </div>
+  <div class="address">
+    <h4>Address:</h4>
+    <p>Stigerplatåveien 210</p>
+    <p>8626 Mo i Rana</p>
+    <p>Norway</p>
+    <p>Phone: 90 00 00 00</p>
+    <p>E-mail: info@example.com</p>
+  </div>
+</section>
+<footer>
+<p>©2020 Community Science Museum, All rights reserved</p>
+</footer>
+<!-- Image source: url <https://unsplash.com/photos/A_dJOYpxEVU> by Andy Li on Unsplash -->
+<!-- Image source: url <https://unsplash.com/photos/UudGNHJdNSo> by Photo by AbsolutVision on Unsplash -->
+<!-- Image source: url <https://unsplash.com/photos/Wns3U-oVoLA> by Joseph Gonzalez on Unsplash -->
+<!-- Image source: url <https://unsplash.com/photos/c9FQyqIECds> by Mike Petrucci on Unsplash -->
 </body>
 </html>
