finished off form CSS on Visit page

--- a/pages/exhibition.html
+++ b/pages/exhibition.html
@@ -32,6 +32,7 @@
   See what's on in museums and galleries
 </h2>
 
+<main>
   <!-- ----------- First Section ----------- -->
   <section class="section_one">
     <img src="/images_csm/Cosmology_escena-3d-espacio.jpg" alt="Cosmos image from the space">
@@ -119,6 +120,8 @@
       </p>
   </section>
 <p class="photo_source_desktop_one">Photo: Franck V. on Unsplash</p>
+</main>
+  
 
 <section class="bottom">
   <div class="hours">
