--- a/pages/explore.html
+++ b/pages/explore.html
@@ -31,6 +31,8 @@
   <h2 class="title_text">
     Explore the world of science
   </h2>
+
+  <main>
     <!-- ----------- First Section ----------- -->
     <section class="section_one">
       <img src="/images_csm/mammoth-1257288.jpg" alt="Mammoth skeleton in the museum">
@@ -90,6 +92,8 @@
             </p>
       </section>
       <p class="photo_source_desktop_two">Photo: Hans Reniers on Unsplash</p>
+  </main>
+    
   <section class="bottom">
     <div class="hours">
       <h4>Hours: </h4>
