--- a/pages/visit.html
+++ b/pages/visit.html
@@ -32,8 +32,8 @@
     Plan your visit
   </h2>
 
-  <div class="items_container">
-    <!-- --------------------------------------- First Section ----------- -->
+  <main class="items_container">
+    <!-- -------------------- First Section ----------- -->
   <section class="section_container">
     <img src="/images_csm/andy-li-A_dJOYpxEVU-unsplash.jpg" alt="Holding ticket in hand">
     <p class="photo_source">Photo: Andy Li on Unsplash</p>
@@ -50,7 +50,7 @@
       </p>
   </section>
   
-    <!-- --------------------------------------- Second Section ----------- -->
+    <!-- -------------------- Second Section ----------- -->
   <section class="section_container">
     <img src="/images_csm/absolutvision-UudGNHJdNSo-unsplash.jpg" alt="Handicap sign painten in the parking lot">
       <p class="photo_source">Photo: Photo by AbsolutVision on Unsplash</p>
@@ -60,7 +60,7 @@
         </p>
   </section>
   
-    <!-- --------------------------------------- Third Section ----------- -->
+    <!-- --------------------- Third Section ----------- -->
   <section class="section_container">
     <img src="/images_csm/joseph-gonzalez-Wns3U-oVoLA-unsplash.jpg" alt="Waffles and coffe on the table, lunckbreak or coffee time">
     <p class="photo_source">Photo: Joseph Gonzalez on Unsplash</p>
@@ -70,7 +70,7 @@
         </p>
   </section>
     
-  <!-- ------------------------------------------ Fouth Section ----------- -->
+  <!-- ----------------------- Fouth Section ----------- -->
   <section class="section_container">
     <img src="/images_csm/mike-petrucci-c9FQyqIECds-unsplash.jpg" alt="A sign showing that the shop is open, or open sign">
       <p class="photo_source">Photo: Mike Petrucci on Unsplash</p>
@@ -80,7 +80,24 @@
           to continue to explore science even after you’ve left the museum.
         </p>
   </section>
+</main>
+
+  <!-- --------- Form -------------- Form ----------- -->
+  <div class="form_container">
+    <p class="contact_us">Contact us</p>
+    <p class="form_text">Got a questions? We'd love to hear from you. Send us a message and we'll
+      respond as soon as possible.
+    </p>
+    <br>
+  <form class="contact-form" action="/action_page.php" method="post">
+    <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
+    <input type="text" name="email" id="email" placeholder="E-mail">
+    <input type="text" name="subject" id="subject" placeholder="Subject">
+    <textarea class="comment_box" name="message" placeholder="Message"></textarea>
+    <button type="submit" value="Submit">SUBMIT</button>
+    </form>
   </div>
+  
 
 <section class="bottom">
   <div class="hours">
