--- a/pages/connect.html
+++ b/pages/connect.html
@@ -30,7 +30,9 @@
   <h2 class="title_text">
     Get involve through our programs
   </h2>
-  <!-- ----------- First Section ----------- -->
+  
+  <main>
+    <!-- ----------- First Section ----------- -->
     <section class="section_one">
       <img src="/images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg" alt="Giving heart to each other, supporting each other.">
       <p class="photo_source_mobile">Photo: Kelly Sikkema on Unsplash</p>
@@ -79,25 +81,27 @@
         </p>
       </section>
       <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
-  <section class="bottom">
-    <div class="hours">
-      <h4>Hours: </h4>
-      <p>Monday: Closed</p>
-      <p>Tuesday: 10:00 – 16:00</p>
-      <p>Wednesday: 10:00 – 16:00</p>
-      <p>Thursday: 10:00 – 16:00</p>
-      <p>Friday: 10:00 – 19:00</p>
-      <p>Saturday: 9:00 – 16:00</p>
-      <p>Sunday: 9:00 – 13:00</p>
-    </div>
-    <div class="address">
-      <h4>Address:</h4>
-      <p>Stigerplatåveien 210</p>
-      <p>8626 Mo i Rana</p>
-      <p>Norway</p>
-      <p>Phone: 90 00 00 00</p>
-      <p>E-mail: info@example.com</p>
-    </div>
+  </main>
+  
+<section class="bottom">
+  <div class="hours">
+    <h4>Hours: </h4>
+    <p>Monday: Closed</p>
+    <p>Tuesday: 10:00 – 16:00</p>
+    <p>Wednesday: 10:00 – 16:00</p>
+    <p>Thursday: 10:00 – 16:00</p>
+    <p>Friday: 10:00 – 19:00</p>
+    <p>Saturday: 9:00 – 16:00</p>
+    <p>Sunday: 9:00 – 13:00</p>
+  </div>
+  <div class="address">
+    <h4>Address:</h4>
+    <p>Stigerplatåveien 210</p>
+    <p>8626 Mo i Rana</p>
+    <p>Norway</p>
+    <p>Phone: 90 00 00 00</p>
+    <p>E-mail: info@example.com</p>
+  </div>
 </section>
 <footer>
   <p>©2020 Community Science Museum, All rights reserved</p>
