--- a/pages/news.html
+++ b/pages/news.html
@@ -30,6 +30,8 @@
   <h2 class="title_text">
     Stay tuned with upcoming events and other exhibition venues
   </h2>
+
+  <main>
     <!-- ----------- First Section ----------- -->
     <section class="section_one">
       <img src="/images_csm/scientific-2040795.jpg" alt="Professor doing reasearch in the science lab.">
@@ -66,6 +68,8 @@
         </p>
       </section>
       <p class="photo_source_desktop_one">Photo: Christian Dubovan on Unsplash</p>
+  </main>
+    
   <section class="bottom">
     <div class="hours">
       <h4>Hours: </h4>
