--- a/pages/visit.html
+++ b/pages/visit.html
@@ -89,7 +89,7 @@
       respond as soon as possible.
     </p>
     <br>
-  <form class="contact-form" action="/action_page.php" method="post">
+  <form class="contact-form" action="/contactform.php" method="post">
     <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
     <input type="text" name="email" id="email" placeholder="E-mail">
     <input type="text" name="subject" id="subject" placeholder="Subject">
