Added form on Ecplore page

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -93,6 +93,23 @@
       </section>
       <p class="photo_source_desktop_two">Photo: Hans Reniers on Unsplash</p>
   </main>
+
+   <!-- --------- Form -------------- Form ----------- -->
+   <div class="form_container">
+    <p class="contact_us">Contact us</p>
+    <p class="form_text">Got a questions? We'd love to hear from you. Send us a message and we'll
+      respond as soon as possible.
+    </p>
+    <br>
+  <form class="contact-form" action="/contactform.php" method="post">
+    <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
+    <input type="text" name="email" id="email" placeholder="E-mail">
+    <input type="text" name="subject" id="subject" placeholder="Subject">
+    <textarea class="comment_box" name="message" placeholder="Message"></textarea>
+    <button type="submit" value="Submit">SUBMIT</button>
+    </form>
+  </div>
+  
     
   <section class="bottom">
     <div class="hours">
