--- a/pages/explore.html
+++ b/pages/explore.html
@@ -16,10 +16,9 @@
     </div>
     <ul>
       <li><a href="visit.html">Visit</a></li>
-      <li><a href="connect.html">Connect</a></li>
+      <li><a href="joinus.html">Join us</a></li>
       <li class="on_this_page"><a href="explore.html">Explore</a></li>
       <li><a href="exhibition.html">Exhibition</a></li>
-      <li><a href="news.html">News</a></li>
       <li><a href="/index.html">Home</a></li>
     </ul>
   </nav>
