--- a/pages/joinus.html
+++ b/pages/joinus.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Get involve with our programs and explore the world of science.">
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
-  <link rel="stylesheet" type="text/css" href="connect.css">
+  <link rel="stylesheet" type="text/css" href="joinus.css">
 <title>Connect | Cummunity Science Museum</title>
 </head>
 <body>
@@ -15,24 +15,49 @@
     </div>
     <ul>
       <li><a href="visit.html">Visit</a></li>
-      <li class="on_this_page"><a href="connect.html">Connect</a></li>
+      <li class="on_this_page"><a href="connect.html">Join us</a></li>
       <li><a href="explore.html">Explore</a></li>
       <li><a href="exhibition.html">Exhibition</a></li>
-      <li><a href="news.html">News</a></li>
       <li><a href="/index.html">Home</a></li>
     </ul>
   </nav>
   <header class="header_container" alt="Visit Community Science Museum">
     <div class="inside_header_container">
-      <h1>Connect</h1>
+      <h1>Join us</h1>
     </div>
   </header>
   <h2 class="title_text">
-    Get involve through our programs
+    Come join us at the Community Science Museum where we’re committed to making science accessible to all.
   </h2>
   
   <main>
-    <!-- ----------- First Section ----------- -->
+  <!-- ----------- First Section ----------- -->
+    <section class="section_one">
+      <img src="/images_csm/celso-405219.jpg" alt="Moon cosmology in when changing colors">
+    <p class="photo_source_mobile">Photo: Community Science Museum</p>
+    <p class="article_text">
+      Over the course of human history, science has developed from our early understanding of fire, wind, water, and 
+      earth to exploring everything from galaxies far away to the very building blocks of life itself.
+      The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and 
+      perhaps even ignite a lifelong passion to continue the exploration of the world around us.
+    </p>
+  </section>
+  <!-- ----------- Second Section ----------- -->
+  <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
+  <section class="section_two">
+    <img src="/images_csm/exhibition.jpg" alt="Exhibition spaces of Community Science Museum">
+    <p class="photo_source_mobile">Photo: Community Science Museum</p>
+    <p class="article_text">
+      We believe science should not be confined to the textbook, but brought to live through exhibits. This is 
+      why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these 
+      exhibits are designed for you to interact with and play around to see science come to life (apart from the 
+      dinosaur exhibits – they only come to life at night when everyone’s gone home).
+    </p>
+  </section>
+  <p class="photo_source_desktop_two">Photo: Community Science Museum</p>
+
+  <h2 class="get_involved_title">Get Involved</h2>
+    <!-- ----------- Third Section ----------- -->
     <section class="section_one">
       <img src="/images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg" alt="Giving heart to each other, supporting each other.">
       <p class="photo_source_mobile">Photo: Kelly Sikkema on Unsplash</p>
@@ -49,7 +74,7 @@
     </section>
   <p class="photo_source_desktop_one">Photo: Kelly Sikkema on Unsplash</p>
 
-  <!-- ----------- Second Section ----------- -->
+  <!-- ----------- Fouth Section ----------- -->
   <section class="section_two">
     <img src="/images_csm/teamwork_join_hands1804.jpg" alt="Get involve by teamwork, join hands.">
       <p class="photo_source_mobile">Photo: @jcomp / Freepik</p>
@@ -67,7 +92,7 @@
   </section>
   <p class="photo_source_desktop_two">Photo: @jcomp / Freepik</p>
 
-  <!-- ----------- Third Section ----------- -->
+  <!-- ----------- Fifth Section ----------- -->
   <section class="section_one">
     <img src="/images_csm/people-219985_1280.jpg" alt="A researcher looking throught microscope.">
     <p class="photo_source_mobile">Photo: Community Science Museum</p>
