Finished off adding form on the Home page

--- a/index.html
+++ b/index.html
@@ -72,22 +72,17 @@
       <p class="photo_source_desktop_one">Photo: Christian Dubovan on Unsplash</p>
   </main>
 
-  <!-- --------- Form -------------- Form ----------- -->
+    <!-- ----------- Form Section ----------- -->
   <div class="form_container">
-    <p class="contact_us">Contact us</p>
-    <p class="form_text">Got a questions? We'd love to hear from you. Send us a message and we'll
-      respond as soon as possible.
+    <p class="form_text">Bring some science to your inbox.
     </p>
-    <br>
-  <form class="contact-form" action="/contactform.php" method="post">
-    <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
-    <input type="text" name="email" id="email" placeholder="E-mail">
-    <input type="text" name="subject" id="subject" placeholder="Subject">
-    <textarea class="comment_box" name="message" placeholder="Message"></textarea>
+  <form class="contact_form" action="/contactform.php" method="post">
+    <input type="text" name="email" id="email" placeholder="Enter your e-mail to sign up for our newsletter.">
     <button type="submit" value="Submit">SUBMIT</button>
     </form>
   </div>
 
+  <!-- ----------- Bottom Section ----------- -->
   <section class="bottom">
       <div class="hours">
         <h4>Hours: </h4>
@@ -112,6 +107,5 @@
     <p>©2020 Community Science Museum, All rights reserved</p>
   </footer>
   <!-- Source photo for "Energetica": url <https://unsplash.com/photos/gxsRL8B_ZqE>, Photo by Christian Dubovan on Unsplash -->
-
 </body>
 </html>
