--- a/pages/explore.html
+++ b/pages/explore.html
@@ -100,7 +100,7 @@
       respond as soon as possible.
     </p>
     <br>
-  <form class="contact-form" action="/contactform.php" method="post">
+  <form class="contact_form" action="/contactform.php" method="post">
     <input type="text" name="fullname" id="fullname" placeholder="Full name" value="">
     <input type="text" name="email" id="email" placeholder="E-mail">
     <input type="text" name="subject" id="subject" placeholder="Subject">
