--- a/pages/joinus.html
+++ b/pages/joinus.html
@@ -15,7 +15,7 @@
     </div>
     <ul>
       <li><a href="visit.html">Visit</a></li>
-      <li class="on_this_page"><a href="connect.html">Join us</a></li>
+      <li class="on_this_page"><a href="joinus.html">Join us</a></li>
       <li><a href="explore.html">Explore</a></li>
       <li><a href="exhibition.html">Exhibition</a></li>
       <li><a href="/index.html">Home</a></li>
