Meta viewport tag
Added meta viewport tag.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Come join us at the Community Science Museum where we’re committed to making science accessible to all. 
   The admission is free and there's plenty of things to explore">
   <meta name="keywords" content="HTML, CSS">
