--- a/pages/exhibition.html
+++ b/pages/exhibition.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A place to discover the history of our universe.">
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Suphachai Hestmark">
