--- a/pages/explore.html
+++ b/pages/explore.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Explore the wonder of the universe. We have everything from human history, medicine,
   technology, our planet and more.">
   <meta name="keywords" content="HTML, CSS">
