--- a/pages/visit.html
+++ b/pages/visit.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Make an unforgettable visit at our museum. With free admission and 
   accessibility for wheelchair made it easier for everyone to explore. We do also have café and shop onsite.">
   <meta name="keywords" content="HTML, CSS">
